--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <script src="./dist/swagger-initializer.js" charset="UTF-8"></script>
 <script>
     window.onload = function () {
-        const ui = SwaggerUIBundle({
+       SwaggerUIBundle({
             url: "openapi.yaml",
             dom_id: "#swagger-ui"
         })
