--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Swagger UI</title>
+    <title>迪曼森网证服务开放API文档定义</title>
     <link rel="stylesheet" type="text/css" href="./dist/swagger-ui.css"/>
     <link rel="stylesheet" type="text/css" href="./dist/index.css"/>
-    <link rel="icon" type="image/png" href="./dist/favicon-32x32.png" sizes="32x32"/>
-    <link rel="icon" type="image/png" href="./dist/favicon-16x16.png" sizes="16x16"/>
+    <link rel="icon" type="image/png" href="dist/favicon.ico" sizes="32x32"/>
+    <link rel="icon" type="image/png" href="dist/favicon.ico" sizes="16x16"/>
 </head>
 
 <body>
